# plc-diff

./: Cargo.toml  README.md
src/: grafcet.rs  lib.rs  main.rs
tests/: orig.smbp
