[package]
name = "plc-diff"
version = "0.1.0"
description = "Tools for managing Machine Expert - Basic projects in Git"
authors = ["Lukas Sandström <lukas.sandstrom@chalmers.se>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
itertools = "0.10"
quick-xml = "0.22"
